...
        />
      </TouchableOpacity>
    </View>
  );

  return (
    <View style={{ flex: 1, flexGrow: 1, backgroundColor: colors.BGreen }} testID="azkar-detail-container">
      <ThemedBackground />
      <CustomHeader title={name} isHome={false} navigation={navigation} Left={HeaderButtons} />
      <View style={{
        flex: 1,
        alignItems: 'center',
        justifyContent: 'center',
...
